--- a/admin.html
+++ b/admin.html
@@ -306,13 +306,14 @@ function formatTimeFromTimestamp(ts) {
         <td class="border p-1">${escapeHtml(r.name)}</td>
         <td class="border p-1">${escapeHtml(r.date)}</td>
         <td class="border p-1">${escapeHtml(timeStr)}</td>
-        <td class="border p-1 ${r.status === "Hadir" ? "text-green-600" : "text-red-600"}">
+        <td class="border p-1 ${
+  r.status === "Hadir" ? "text-green-600" :
+  r.status === "Terlambat" ? "text-red-600" : "text-gray-500"
+}">
   ${escapeHtml(r.status)}
 </td>
 <td class="border p-1">
   ${r.photo ? `<img src="${escapeAttr(r.photo)}" data-photo="${escapeAttr(r.photo)}" class="w-16 h-16 rounded object-cover cursor-pointer"/>` : '-'}
-</td>
-          ${r.photo ? `<img src="${escapeAttr(r.photo)}" data-photo="${escapeAttr(r.photo)}" class="w-16 h-16 rounded object-cover cursor-pointer"/>` : '-'}
         </td>
       `;
       absensiTable.appendChild(tr);
@@ -331,7 +332,7 @@ function formatTimeFromTimestamp(ts) {
   function renderRanking(data) {
     const hadirCounts = {};
     data.forEach(r => {
-      if (r.status === "Hadir") {
+      if (r.status === "Hadir" || r.status === "Terlambat") {
         hadirCounts[r.name] = (hadirCounts[r.name] || 0) + 1;
       }
     });
@@ -553,4 +554,5 @@ function formatTimeFromTimestamp(ts) {
 
   </body>
   </html>
+
 
