--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 
     // Default admin
     if (!localStorage.getItem(STORAGE_KEY)) {
-      localStorage.setItem(STORAGE_KEY, JSON.stringify({ username: "admin", password: "admin123" }));
+      localStorage.setItem(STORAGE_KEY, JSON.stringify({ username: "Adminabsen", password: "Absen2025" }));
     }
 
     loginBtn.onclick = () => {
@@ -57,3 +57,4 @@
   </script>
 </body>
 </html>
+
