--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   const password = document.getElementById("password");
   const errorMsg = document.getElementById("errorMsg");
 
-  const adminUser = "Adminabsen";
-  const adminPass = "Absen2025";
+  const adminUser = "adminabsen";
+  const adminPass = "12345";
 
   loginBtn.addEventListener("click", () => {
     if (username.value === adminUser && password.value === adminPass) {
@@ -86,4 +86,5 @@
   </style>
 </body>
 </html>
+
 
