--- a/absensi.html
+++ b/absensi.html
@@ -81,7 +81,7 @@
               <div id="photoPreviewWrap" class="hidden mt-4">
                 <label class="block text-sm text-gray-700">Preview Foto</label>
                 <img id="photoPreview" class="w-full rounded-lg" />
-                <button id="confirmBtn" class="mt-3 w-full bg-green-600 text-white rounded-lg px-3 py-2">Konfirmasi</button>
+                <button id="confirmBtn" class="mt-3 w-full bg-green-600 text-white rounded-lg px-3 py-2">Konfirmasi (Klik Sekali Aja Ya)</button>
               </div>
             </div>
           </div>
@@ -317,6 +317,7 @@ if (!result.success) {
   </script>
 </body>
 </html>
+
 
 
 
