--- a/admin.html
+++ b/admin.html
@@ -485,6 +485,9 @@
   </div>
 
 <script>
+
+const API_URL = "https://script.google.com/macros/s/AKfycby0ddsYAMInPtJeY-BXVeaY6NNt5ELccq2QnFHoMe9A9Tijq3HcSEeFvnwM4tRobhsZ/exec";
+  
 console.log("ADMIN JS LOADED ✅");
 
 /* ----------- Elemen DOM ----------- */
@@ -1002,7 +1005,4 @@ window.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 </body>
-</html> Konfigurasi ----------- */
-const API_URL = "https://script.google.com/macros/s/AKfycby0ddsYAMInPtJeY-BXVeaY6NNt5ELccq2QnFHoMe9A9Tijq3HcSEeFvnwM4tRobhsZ/exec";
-
-/* -----------
+</html> 
