--- a/admin.html
+++ b/admin.html
@@ -632,12 +632,14 @@ function renderTable(data) {
   });
 }
 
-/* ----------- Render Ranking TERBAIK ----------- */
-function renderRanking(data) {
+function renderRanking() {
+  // Gunakan SEMUA data, bukan data yang difilter
+  const allData = window.absensiData || [];
+  
   // Hitung statistik per pegawai
   const pegawaiStats = {};
   
-  data.forEach(r => {
+  allData.forEach(r => {
     if (!pegawaiStats[r.name]) {
       pegawaiStats[r.name] = {
         totalHadir: 0,
@@ -668,6 +670,16 @@ function renderRanking(data) {
     }
   });
 
+  // Hitung skor untuk ranking
+  // Prioritas: 1. Jumlah kehadiran tepat waktu, 2. Waktu check-in tercepat
+  const ranking = Object.entries(pegawaiStats)
+    .map(([name, stats]) => ({
+      name,
+      ...stats,
+      // Skor: totalHadir * 1000 - waktuTercepat (semakin banyak hadir & semakin cepat = skor tinggi)
+      score: (stats.totalHadir * 10000) - stats.waktuTercepat
+    }))
+    .sort((a, b) => b.score - a.score);
   // Hitung skor untuk ranking
   // Prioritas: 1. Jumlah kehadiran tepat waktu, 2. Waktu check-in tercepat
   const ranking = Object.entries(pegawaiStats)
@@ -1006,3 +1018,4 @@ window.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html> 
+
