--- a/admin.html
+++ b/admin.html
@@ -646,7 +646,7 @@ function renderRanking() {
         totalHadir: 0,
         totalTerlambat: 0,
         totalKehadiran: 0,
-        waktuTercepat: 999999, // dalam menit
+        waktuTercepat: 999999,
         waktuTercepatStr: ""
       };
     }
@@ -672,32 +672,10 @@ function renderRanking() {
   });
 
   // Hitung skor untuk ranking
-  // Prioritas: 1. Jumlah kehadiran tepat waktu, 2. Waktu check-in tercepat
   const ranking = Object.entries(pegawaiStats)
     .map(([name, stats]) => ({
       name,
       ...stats,
-      // Skor: totalHadir * 1000 - waktuTercepat (semakin banyak hadir & semakin cepat = skor tinggi)
-      score: (stats.totalHadir * 10000) - stats.waktuTercepat
-    }))
-    .sort((a, b) => b.score - a.score);
-  // Hitung skor untuk ranking
-  // Prioritas: 1. Jumlah kehadiran tepat waktu, 2. Waktu check-in tercepat
-  const ranking = Object.entries(pegawaiStats)
-    .map(([name, stats]) => ({
-      name,
-      ...stats,
-      // Skor: totalHadir * 1000 - waktuTercepat (semakin banyak hadir & semakin cepat = skor tinggi)
-      score: (stats.totalHadir * 10000) - stats.waktuTercepat
-    }))
-    .sort((a, b) => b.score - a.score);
-  // Hitung skor untuk ranking
-  // Prioritas: 1. Jumlah kehadiran tepat waktu, 2. Waktu check-in tercepat
-  const ranking = Object.entries(pegawaiStats)
-    .map(([name, stats]) => ({
-      name,
-      ...stats,
-      // Skor: totalHadir * 1000 - waktuTercepat (semakin banyak hadir & semakin cepat = skor tinggi)
       score: (stats.totalHadir * 10000) - stats.waktuTercepat
     }))
     .sort((a, b) => b.score - a.score);
@@ -927,7 +905,7 @@ function applyCurrentFilter() {
                 (filterDate.value ? new Date(filterDate.value).toLocaleDateString("id-ID") : "Hari ini"));
 
   renderTable(filteredData);
-  renderRanking(filteredData);
+  renderRanking();
   renderStats(filteredData, label);
   renderRekap(filteredData, "rekapBulanan");
   renderCharts(filteredData);
@@ -1029,5 +1007,6 @@ window.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html> 
+
 
 
